@@ -78,6 +78,7 @@ Common.choice.cancel         =Cancel
 Common.choice.yes            =Yes
 Common.choice.no             =No
 Common.title.confirm         =Confirm
+Common.title.error           =Error
 
 #File Save/Load
 FileChooser.openDialogTitleText          =Open
